--- a/Windows XP Homestead/gtk-3.20/gtk.css
+++ b/Windows XP Homestead/gtk-3.20/gtk.css
@@ -1,5 +1,3 @@
-@import url("gtk-headerbar.css");
-
 * {
   -GtkScrollbar-has-backward-stepper: true;
   -GtkScrollbar-has-forward-stepper: true;
@@ -171,9 +169,11 @@ button {
   background-color: #ECE9D8;
   background-image: linear-gradient(to left, rgba(0, 0, 0, 0.045) 1px, rgba(0, 0, 0, 0.006) 2px, transparent 2px), linear-gradient(to top, rgba(0, 0, 0, 0.13), transparent 3px), linear-gradient(to bottom, white, #fcfcfa 3px, #f6f6f3 7px, #f4f4f0 50%, #f0f0ea);
   -gtk-outline-radius: 2px; }
-  button:hover, button:focus {
+  button:hover {
     box-shadow: inset 0 0 1px 2px #ffc73c;
     border-color: #5b6248; }
+  button:focus {
+    box-shadow: inset 0 0 1px 2px #6982ee; }
   button:active, button:checked {
     border-color: shade(#dbd7bb, 0.3);
     background-color: #e4e0c9;
@@ -626,7 +626,7 @@ entry {
   padding: 6px 5px;
   border-width: 1px;
   border-style: solid;
-  border-color: #000000;
+  border-color: #7f9db9;
   border-radius: 0px;
   color: #000000;
   caret-color: currentColor;
@@ -697,8 +697,8 @@ list {
     background: none; }
 
 .frame, frame > border {
-  border-width: 1px;
-  border-style: solid;
+  border-width: 2px;
+  border-style: groove;
   border-color: #dbd7bb;
   border-radius: 0;
   box-shadow: none;
@@ -902,7 +902,7 @@ image {
 .caja-location-entry {
   padding: 3px 5px; }
 
-scrolledwindow.frame, scrolledwindow viewport.frame {
+scrolledwindow viewport.frame {
   border: none; }
 
 arrow, combobox arrow {
@@ -936,7 +936,7 @@ button.circular, button.circular-button {
   padding: 0;
   min-width: 16px;
   min-height: 24px;
-  padding: 2px 6px;
+  padding: 2px 8px;
   border-radius: 50%;
   -gtk-outline-radius: 50%; }
 
@@ -990,7 +990,15 @@ menubar, .menubar {
   padding: 0;
   border-style: none;
   background-color: #ECE9D8;
-  color: #000000; }
+  color: #000000;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #d8d2bd;
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top-color: #ffffff;
+  padding: 0px 2px 1px 2px;
+  box-shadow: inset 1px -0.5px 2px -1px rgba(81, 81, 77, 0.2); }
   menubar:backdrop, .menubar:backdrop {
     color: #000000;
     background-color: #ECE9D8; }
@@ -1845,6 +1853,150 @@ colorchooser #add-color-button {
   padding-left: 0;
   padding-right: 0; }
 
+headerbar {
+  min-height: 30px;
+  padding: 0 4px 0 4px;
+  color: #000000;
+  border-radius: 6px 6px 0 0;
+  background-color: #ECE9D8;
+  background-size: 1px 100%;
+  background-image: url("assets/titlebar-focused-middle.png"); }
+  headerbar:backdrop {
+    color: #000000;
+    background-color: #ECE9D8;
+    background-image: url("assets/titlebar-unfocused-middle.png"); }
+  headerbar.titlebar {
+    border-radius: 6px 6px 0 0; }
+  headerbar.maximized, .maximized headerbar, headerbar.fullscreen, .fullscreen headerbar {
+    border-radius: 0; }
+  headerbar separator {
+    -GtkWidget-window-dragging: true;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    background-color: #d4d2c2; }
+    headerbar separator:backdrop {
+      background-color: #dad8c8; }
+  separator:first-child + headerbar, separator:first-child + headerbar:backdrop, headerbar:first-child, headerbar:first-child:backdrop {
+    border-top-left-radius: 6px; }
+    .maximized separator:first-child + headerbar, .tiled separator:first-child + headerbar, .maximized separator:first-child + headerbar:backdrop, .tiled separator:first-child + headerbar:backdrop, .maximized headerbar:first-child, .tiled headerbar:first-child, .maximized headerbar:first-child:backdrop, .tiled headerbar:first-child:backdrop {
+      border-radius: 0; }
+  headerbar:last-child, headerbar:last-child:backdrop {
+    border-top-right-radius: 6px; }
+    .maximized headerbar:last-child, .tiled headerbar:last-child, .maximized headerbar:last-child:backdrop, .tiled headerbar:last-child:backdrop {
+      border-radius: 0; }
+  headerbar .title {
+    padding-left: 12px;
+    padding-right: 12px;
+    font-weight: bold;
+    color: #FFFFFF;
+    padding: 0 12px;
+    text-shadow: 1px 1px black; }
+    headerbar .title:backdrop {
+      text-shadow: none;
+      color: rgba(255, 255, 255, 0.3); }
+  headerbar .subtitle {
+    font-size: smaller;
+    padding-left: 12px;
+    padding-right: 12px;
+    color: rgba(255, 255, 255, 0.7); }
+  headerbar button {
+    padding: 0px; }
+  headerbar entry {
+    padding: 6px 8px; }
+  headerbar .image-button,
+  headerbar .image-button:hover,
+  headerbar .image-button:active,
+  headerbar .image-button:backdrop,
+  headerbar .image-button:backdrop:hover
+  .image-button:disabled,
+  headerbar .image-button:checked,
+  headerbar .image-button:active:disabled
+  .image-button:checked:disabled {
+    background-color: transparent;
+    border-style: none;
+    background-size: 21px 21px;
+    background-position: center;
+    padding: 3px 2px 2px 3px;
+    margin: 3px 0px 0px -4px;
+    background-repeat: no-repeat;
+    outline-color: transparent; }
+  headerbar .image-button {
+    background: no-repeat url("assets/button-bg-normal.png") 100% 100%;
+    background-position: center; }
+    headerbar .image-button:hover, headerbar .image-button:active, headerbar .image-button:focus {
+      box-shadow: none;
+      border-style: none;
+      outline-color: transparent; }
+    headerbar .image-button:hover {
+      background: no-repeat url("assets/button-bg-hover.png") 100% 100%;
+      background-position: center; }
+    headerbar .image-button:backdrop {
+      background: no-repeat url("assets/button-bg-backdrop.png") 100% 100%;
+      background-position: center; }
+      headerbar .image-button:backdrop:hover {
+        background: no-repeat url("assets/button-bg-backdrop-hover.png") 100% 100%;
+        background-position: center; }
+    headerbar .image-button:active {
+      background: no-repeat url("assets/button-bg-active.png") 100% 100%;
+      background-position: center; }
+  headerbar .titlebutton.close, headerbar .titlebutton.maximize, headerbar .titlebutton.minimize, headerbar .titlebutton:not(separator) {
+    border: none;
+    box-shadow: none;
+    color: transparent;
+    background-color: transparent;
+    padding: 3px 2px 2px 3px;
+    margin: 3px 0px 0px -4px;
+    background-size: 21px 21px;
+    background-position: center; }
+  headerbar .titlebutton.close {
+    background: url("assets/close-normal.png") 100% 100%; }
+    headerbar .titlebutton.close:hover {
+      background: url("assets/close-hover.png") 100% 100%; }
+    headerbar .titlebutton.close:active {
+      background: url("assets/close-active.png") 100% 100%; }
+    headerbar .titlebutton.close:backdrop {
+      background: url("assets/close-backdrop.png") 100% 100%; }
+      headerbar .titlebutton.close:backdrop:hover {
+        background: url("assets/close-backdrop-hover.png") 100% 100%; }
+      headerbar .titlebutton.close:backdrop:active {
+        background: url("assets/close-active.png") 100% 100%; }
+  headerbar .titlebutton.minimize {
+    background: url("assets/minimize-normal.png") 100% 100%; }
+    headerbar .titlebutton.minimize:hover {
+      background: url("assets/minimize-hover.png") 100% 100%; }
+    headerbar .titlebutton.minimize:active {
+      background: url("assets/minimize-active.png") 100% 100%; }
+    headerbar .titlebutton.minimize:backdrop {
+      background: url("assets/minimize-backdrop.png") 100% 100%; }
+      headerbar .titlebutton.minimize:backdrop:hover {
+        background: url("assets/minimize-backdrop-hover.png") 100% 100%; }
+      headerbar .titlebutton.minimize:backdrop:active {
+        background: url("assets/minimize-active.png") 100% 100%; }
+  headerbar .titlebutton.maximize {
+    background: url("assets/maximize-normal.png") 100% 100%; }
+    headerbar .titlebutton.maximize:hover {
+      background: url("assets/maximize-hover.png") 100% 100%; }
+    headerbar .titlebutton.maximize:active {
+      background: url("assets/maximize-active.png") 100% 100%; }
+    headerbar .titlebutton.maximize:backdrop {
+      background: url("assets/maximize-backdrop.png") 100% 100%; }
+      headerbar .titlebutton.maximize:backdrop:hover {
+        background: url("assets/maximize-backdrop-hover.png") 100% 100%; }
+      headerbar .titlebutton.maximize:backdrop:active {
+        background: url("assets/maximize-active.png") 100% 100%; }
+  .maximized headerbar .titlebutton.maximize {
+    background: url("assets/restore-normal.png") 100% 100%; }
+    .maximized headerbar .titlebutton.maximize:hover {
+      background: url("assets/restore-hover.png") 100% 100%; }
+    .maximized headerbar .titlebutton.maximize:active {
+      background: url("assets/restore-active.png") 100% 100%; }
+    .maximized headerbar .titlebutton.maximize:backdrop {
+      background: url("assets/restore-backdrop.png") 100% 100%; }
+      .maximized headerbar .titlebutton.maximize:backdrop:hover {
+        background: url("assets/restore-backdrop-hover.png") 100% 100%; }
+      .maximized headerbar .titlebutton.maximize:backdrop:active {
+        background: url("assets/restore-active.png") 100% 100%; }
+
 toolbar {
   padding: 4px;
   border: none;
@@ -1879,16 +2031,11 @@ toolbar {
 
 .primary-toolbar {
   -GtkWidget-window-dragging: true;
-  padding: 4px;
-  border-width: 0 0 1px 0;
-  border-style: solid;
-  border-color: #e4e0ca;
-  color: #000000;
-  background-color: #ECE9D8; }
-  .primary-toolbar:backdrop {
-    border-color: #ECE9D8;
-    color: #000000;
-    background-color: #ECE9D8; }
+  border-width: 1px 0 2px 0;
+  border-style: groove;
+  border-color: #dbd7bb;
+  padding: 0px 2px 1px 2px;
+  box-shadow: inset 1px -0.5px 2px -1px rgba(81, 81, 77, 0.2); }
   .primary-toolbar button, .primary-toolbar .raised button {
     padding: 6px 6px;
     border-style: solid;
@@ -1899,9 +2046,11 @@ toolbar {
     background-color: #ECE9D8;
     background-image: linear-gradient(to left, rgba(0, 0, 0, 0.045) 1px, rgba(0, 0, 0, 0.006) 2px, transparent 2px), linear-gradient(to top, rgba(0, 0, 0, 0.13), transparent 3px), linear-gradient(to bottom, white, #fcfcfa 3px, #f6f6f3 7px, #f4f4f0 50%, #f0f0ea);
     -gtk-outline-radius: 2px; }
-    .primary-toolbar button:hover, .primary-toolbar button:focus, .primary-toolbar .raised button:hover, .primary-toolbar .raised button:focus {
+    .primary-toolbar button:hover, .primary-toolbar .raised button:hover {
       box-shadow: inset 0 0 1px 2px #ffc73c;
       border-color: #5b6248; }
+    .primary-toolbar button:focus, .primary-toolbar .raised button:focus {
+      box-shadow: inset 0 0 1px 2px #6982ee; }
     .primary-toolbar button:active, .primary-toolbar button:checked, .primary-toolbar .raised button:active, .primary-toolbar .raised button:checked {
       border-color: shade(#dbd7bb, 0.3);
       background-color: #e4e0c9;
@@ -1935,9 +2084,11 @@ toolbar {
     background-color: #ECE9D8;
     background-image: linear-gradient(to left, rgba(0, 0, 0, 0.045) 1px, rgba(0, 0, 0, 0.006) 2px, transparent 2px), linear-gradient(to top, rgba(0, 0, 0, 0.13), transparent 3px), linear-gradient(to bottom, white, #fcfcfa 3px, #f6f6f3 7px, #f4f4f0 50%, #f0f0ea);
     -gtk-outline-radius: 2px; }
-    .inline-toolbar toolbutton > button:hover, .inline-toolbar toolbutton > button:focus {
+    .inline-toolbar toolbutton > button:hover {
       box-shadow: inset 0 0 1px 2px #ffc73c;
       border-color: #5b6248; }
+    .inline-toolbar toolbutton > button:focus {
+      box-shadow: inset 0 0 1px 2px #6982ee; }
     .inline-toolbar toolbutton > button:active, .inline-toolbar toolbutton > button:checked {
       border-color: shade(#dbd7bb, 0.3);
       background-color: #e4e0c9;
@@ -2550,33 +2701,39 @@ headerbar.selection-mode, toolbar.selection-mode {
     headerbar.selection-mode .selection-menu button .dim-label, toolbar.selection-mode .selection-menu button .dim-label {
       color: #677950; }
 
-decoration {
+decoration, decoration-overlay {
   border-radius: 6px 6px 0 0;
-  border-width: 0px;
-  box-shadow: 0 3px 9px 1px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(0, 0, 0, 0.25);
+  border-width: 2px;
+  border-style: none solid solid solid;
+  border-color: #758d5e;
   margin: 10px; }
-  decoration:backdrop {
-    box-shadow: 0 3px 9px 1px transparent, 0 2px 6px 2px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.25); }
-  .maximized decoration, .fullscreen decoration, .tiled decoration, .tiled-top decoration, .tiled-right decoration, .tiled-bottom decoration, .tiled-left decoration {
-    border-radius: 0; }
-  .popup decoration {
-    box-shadow: none; }
-  .csd.popup decoration {
+  decoration:backdrop, decoration-overlay:backdrop {
+    border-color: #c8d0b7; }
+  decoration.maximized, decoration.fullscreen, .maximized decoration, .fullscreen decoration,
+  decoration tooltip.csd, tooltip decoration, decoration-overlay.maximized, decoration-overlay.fullscreen, .maximized decoration-overlay, .fullscreen decoration-overlay,
+  decoration-overlay tooltip.csd, tooltip decoration-overlay {
+    border-radius: 0;
+    border-width: 0;
+    border-style: none; }
+
+decoration {
+  background: white; }
+  .popup decoration, .csd.popup decoration,
+  decoration tooltip.csd, tooltip decoration {
+    box-shadow: 8px 8px 2px -5px rgba(50, 50, 45, 0.5);
     border-radius: 0px;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3), 0 0 0 1px #000000; }
-  .ssd decoration {
-    border-radius: 6px 6px 0 0;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1); }
-    .ssd decoration.maximized {
-      border-radius: 0; }
-  tooltip.csd decoration {
-    border-radius: 6px;
-    box-shadow: none; }
-  .solid-csd decoration {
-    margin: 1px;
-    border-radius: 0px;
-    background-color: rgba(255, 255, 255, 0.95);
-    box-shadow: none; }
+    padding: 0px 0px 0px 0px;
+    border-style: solid;
+    border-width: 1px;
+    outline-width: 0px;
+    border-color: #aca899; }
+  decoration tooltip.csd, tooltip decoration {
+    border-color: #000000; }
+
+window.csd.unified:not(.solid-csd):not(.fullscreen):not(.tiled):not(.tiled-top):not(.tiled-bottom):not(.tiled-left):not(.tiled-right):not(.maximized),
+window.csd.unified:not(.solid-csd):not(.fullscreen):not(.tiled):not(.tiled-top):not(.tiled-bottom):not(.tiled-left):not(.tiled-right):not(.maximized) > decoration,
+window.csd.unified:not(.solid-csd):not(.fullscreen):not(.tiled):not(.tiled-top):not(.tiled-bottom):not(.tiled-left):not(.tiled-right):not(.maximized) > decoration-overlay {
+  border-radius: 6px 6px 0 0; }
 
 messagedialog .background.csd {
   border-radius: 6px 6px 0 0;
@@ -2809,9 +2966,11 @@ panel-toplevel.background na-tray-applet {
     background-color: #ECE9D8;
     background-image: linear-gradient(to left, rgba(0, 0, 0, 0.045) 1px, rgba(0, 0, 0, 0.006) 2px, transparent 2px), linear-gradient(to top, rgba(0, 0, 0, 0.13), transparent 3px), linear-gradient(to bottom, white, #fcfcfa 3px, #f6f6f3 7px, #f4f4f0 50%, #f0f0ea);
     -gtk-outline-radius: 2px; }
-    #XfceNotifyWindow.osd button:hover, #XfceNotifyWindow.osd button:focus {
+    #XfceNotifyWindow.osd button:hover {
       box-shadow: inset 0 0 1px 2px #ffc73c;
       border-color: #5b6248; }
+    #XfceNotifyWindow.osd button:focus {
+      box-shadow: inset 0 0 1px 2px #6982ee; }
     #XfceNotifyWindow.osd button:active, #XfceNotifyWindow.osd button:checked {
       border-color: shade(#dbd7bb, 0.3);
       background-color: #e4e0c9;
